# Practice-laboratory-facade-SebastianFuentes

./: .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  articulo.md  articulo_english.md  documentation.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: ci.yml
src/order_facade/: __init__.py  demo.py  facade.py
src/order_facade/services/: __init__.py  inventory.py  notifications.py  payments.py  shipping.py
tests/: __init__.py  conftest.py  test_facade.py  test_performance.py
