[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "order-facade-pattern"
version = "1.0.0"
description = "Implementación del patrón Facade para sistemas empresariales de gestión de pedidos"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Sebastian Fuentes Avalos", email = "sebastian.fuentes@example.com"},
]
keywords = [
    "design-patterns", 
    "facade-pattern", 
    "enterprise-architecture", 
    "python",
    "software-engineering"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Object Brokering",
]

dependencies = [
    "dataclasses; python_version<'3.7'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/SebastianFuentesAvalos/facade-pattern-python-sebastianfuentes"
Repository = "https://github.com/SebastianFuentesAvalos/facade-pattern-python-sebastianfuentes.git"
"Bug Tracker" = "https://github.com/SebastianFuentesAvalos/facade-pattern-python-sebastianfuentes/issues"

[project.scripts]
order-facade-demo = "order_facade.demo:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.flake8]
max-line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg",
]
ignore = [
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
]

[tool.hatch.build.targets.wheel]
packages = ["src/order_facade"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/pyproject.toml",
    "/LICENSE",
]